istio-demo/rules/VirtualService-all-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: svca
spec:
  hosts:
  - svca
  http:
  - route:
    - destination:
        host: svca
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: svcb
spec:
  hosts:
  - svcb
  http:
  - route:
    - destination:
        host: svcb
        subset: v1
