istio-demo/rules/VirtualService-svcb-100.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: svcb
spec:
  hosts:
    - svcb
  tcp:
  - route:
    - destination:
        host: svcb
        subset: v2
      weight: 100
