istio-demo/rules/VirtualService-svcb.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: svcb
spec:
  hosts:
    - svcb
  http:
  - route:
    - destination:
        host: svcb
        subset: v1
      weight: 50
    - destination:
        host: svcb
        subset: v2
      weight: 50
