istio-demo/rules/route-rules-svcb-v0.2-50.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: svcb
spec:
  host: svcb
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
